# lore

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/skills/: add-behavioral-slice.md  add-migration.md  add-repository.md  write-tests.md
.github/workflows/: ci.yml
apps/api/: exception_handlers.py  lifespan.py  main.py
docs/: architecture.md  connectors.md
docs/superpowers/plans/: 2026-05-11-github-connector-foundation.md  2026-05-11-github-connector-phase1-sdk.md  2026-05-11-github-connector-phase2-storage.md  2026-05-11-github-connector-phase3-github-connector.md  2026-05-11-github-connector-phase4-ingestion.md  2026-05-11-github-connector-phase5-wiring-tests.md  2026-05-11-lore-backend-skeleton.md  2026-05-11-repository-sync-lifecycle.md  2026-05-12-document-active-state.md  2026-05-12-repository-brief.md  (+4 more)
evals/repository_retrieval/: README.md  eval_logic.py  lore_eval.json
lore/artifacts/: errors.py  repository_brief_models.py  repository_brief_service.py  repository_structure_models.py  repository_structure_service.py
lore/connector_sdk/: __init__.py  base.py  capabilities.py  errors.py  manifest.py  models.py  registry.py
lore/domain/: source.py
lore/extraction/: service.py
lore/infrastructure/: config.py
lore/ingestion/: models.py  repository_import.py  service.py
lore/retrieval/: service.py
lore/schema/: chunk.py  document.py  errors.py  provenance.py  repository_artifact.py  source.py
lore/sync/: errors.py  models.py  service.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_integration_layer.py  0003_repository_sync_runs.py  0004_repository_artifacts.py  0005_document_active_state.py  0006_repository_structure_artifact_type.py
scripts/: eval_repository_retrieval.py
tests/: conftest.py
tests/e2e/: conftest.py  test_connectors_endpoint.py  test_health.py  test_repository_brief_api.py  test_repository_context_api.py  test_repository_search_api.py
tests/integration/: conftest.py  test_document_active_state.py  test_document_repository_paths.py  test_migration_0002.py  test_migration_0005.py  test_migration_0006.py  test_repository_artifact_repository.py  test_repository_brief_active_documents.py  test_repository_context.py  test_repository_search.py  test_repository_structure_api.py  test_repository_sync_run_repository.py  test_source_repository.py
tests/smoke/: test_github_live_import.py
tests/unit/: test_config.py  test_db_infrastructure.py  test_exception_handlers.py  test_observability.py  test_orm_external_models.py  test_orm_models.py  test_repositories_structure.py  test_schema_chunk.py  test_schema_document.py  test_schema_repository_artifact.py  test_schema_source.py
(+70 files in other folders)
